--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.61.5",
     "antd": "^5.22.2",
     "axios": "^1.7.8",
     "next": "15.0.3",
