--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-range": "^1.3.0",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
